# diatom-classifier

./: .gitignore  README.md  TRAINING_WORKFLOW.md  diatom_yolo.yaml  pyproject.toml  requirements.txt
notebooks/: 01_baseline_model.ipynb  02_data_exploration.ipynb
src/: app.py  data_prep.py  inference.py  pipeline.py  split_yolo.py  xml_to_yolo.py
